@@ -1,6 +1,7 @@
 package com.lotteon.service.term;
 
 import com.lotteon.dto.requestDto.PostTermsDTO;
+import com.lotteon.dto.responseDto.GetBannerDTO;
 import com.lotteon.dto.responseDto.GetTermsResponseDto;
 import com.lotteon.entity.term.Terms;
 import com.lotteon.repository.term.TermsRepository;
@@ -14,16 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
-
-/*
-     날짜 : 2024/10/25
-     이름 : 이상훈
-     내용 : 컨트롤러 생성
-
-     수정이력
-      - 2025/10/28 김주경 - selectAllTerms Redis 캐싱처리
-*/
-
 
 @Log4j2
 @Service
@@ -69,7 +60,7 @@ public class TermsService {
 //                .collect(Collectors.toList());
 //    }
 
-    @CacheEvict(value = "termsCache", key = "'terms'")
+//    @CacheEvict(value = "termsCache", key = "'terms'")
     public Terms modifyTerms(PostTermsDTO postTermsDTO) {
         Terms terms = termsRepository.findById(postTermsDTO.getId())
                 .orElseThrow(() -> new IllegalArgumentException("terms not found"));
@@ -79,12 +70,12 @@ public class TermsService {
         return termsRepository.save(terms);
     }
 
-    @Cacheable(value = "termsCache", key = "'terms'", cacheManager = "cacheManager")
+//    @Cacheable(value = "termsCache", key = "'terms'", cacheManager = "cacheManager")
     public List<GetTermsResponseDto> selectAllTerms() {
         List<Terms> terms = termsRepository.findAll();
         return terms.stream()
                 .map(Entity -> modelMapper.map(Entity, GetTermsResponseDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
